# namedropper

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  setup.cfg  test_name_extraction.py  test_native_script_names.py
.github/workflows/: test.yml
name_extraction_pipeline/: cli.py  dispatcher.py  fallback.py  known_given_names.py  language_detection.py  name_language_infer.py  name_origin_predictor.py  name_prism_wrapper.py  tokenizers.py
name_extraction_pipeline/data/: name_origin_lookup.csv
name_extraction_pipeline/handlers/: ar.py  default.py  en.py  fr.py  ja.py  ko.py  vi.py  zh.py
tests/: test_language_infer.py
