[metadata]
name = namedropper
version = 0.1.0
description = A multilingual name parsing engine with confidence scoring.
author = ChatGPT and The Shepherd
license = MIT

[options]
packages = find:
install_requires =
    numpy>=1.26
    spacy==3.7.2
    fastapi
    uvicorn[standard]
    langdetect
    pytest
    jieba
    kiwipiepy

[options.entry_points]
console_scripts =
    namedropper = name_extraction_pipeline.cli:main
